--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-<div class="div firstDiv" >
+<div id="small">
+    <h1>small</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusamus voluptatem deleniti delectus nostrum pariatur in assumenda? Consectetur quis quaerat neque ab totam distinctio iste ipsum, delectus accusantium adipisci officiis?
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid distinctio, nostrum odit sit doloribus labore, minus, veniam fuga numquam aperiam magni maxime facere nulla vel ex ut! Ducimus, velit voluptatem!
        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem sapiente temporibus a consectetur debitis atque alias velit itaque, esse praesentium perferendis provident dolor aperiam amet voluptates ut reiciendis quas. Alias.
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, perspiciatis! Voluptatem illo ea ipsum, libero incidunt quo, nemo dolore officiis, aut nobis est delectus consectetur repellendus asperiores sapiente fugiat quisquam?
     </p>
 </div>
-<div class="div secondDiv" >
+<div id="medium">
+    <h1>medium</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusamus voluptatem deleniti delectus nostrum pariatur in assumenda? Consectetur quis quaerat neque ab totam distinctio iste ipsum, delectus accusantium adipisci officiis?
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid distinctio, nostrum odit sit doloribus labore, minus, veniam fuga numquam aperiam magni maxime facere nulla vel ex ut! Ducimus, velit voluptatem!
        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem sapiente temporibus a consectetur debitis atque alias velit itaque, esse praesentium perferendis provident dolor aperiam amet voluptates ut reiciendis quas. Alias.
        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, perspiciatis! Voluptatem illo ea ipsum, libero incidunt quo, nemo dolore officiis, aut nobis est delectus consectetur repellendus asperiores sapiente fugiat quisquam?
     </p>
 </div>
-<div class="div thirdDiv" >
+<div id="large">
+    <h1>large</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur accusamus voluptatem deleniti delectus nostrum pariatur in assumenda? Consectetur quis quaerat neque ab totam distinctio iste ipsum, delectus accusantium adipisci officiis?
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid distinctio, nostrum odit sit doloribus labore, minus, veniam fuga numquam aperiam magni maxime facere nulla vel ex ut! Ducimus, velit voluptatem!
        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem sapiente temporibus a consectetur debitis atque alias velit itaque, esse praesentium perferendis provident dolor aperiam amet voluptates ut reiciendis quas. Alias.
